--- a/lingoappTcc/app/src/main/res/layout/activity_aba_perfil_professor.xml
+++ b/lingoappTcc/app/src/main/res/layout/activity_aba_perfil_professor.xml
@@ -78,7 +78,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
-                android:text="@string/msg_email_professor"
+                android:text="@string/msg_ex_email_professor"
                 android:textSize="20sp"
                 android:theme="@style/textoRoxoJosefin"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -128,10 +128,10 @@
         android:layout_alignParentBottom="true"
         android:background="@color/roxo"
         android:elevation="2dp"
-        app:menu="@menu/menu_navegacao_inferior"
         app:itemIconSize="35dp"
-        app:labelVisibilityMode="unlabeled"
+        app:itemIconTint="@drawable/item_selector"
         app:itemTextColor="@drawable/item_selector"
-        app:itemIconTint="@drawable/item_selector"/>
+        app:labelVisibilityMode="unlabeled"
+        app:menu="@menu/menu_navegacao_inferior" />
 
 </RelativeLayout>
