--- a/lingoappTcc/app/src/main/res/layout/activity_gerenciar_turma.xml
+++ b/lingoappTcc/app/src/main/res/layout/activity_gerenciar_turma.xml
@@ -52,6 +52,7 @@
         android:layout_height="65dp"
         android:layout_marginTop="120dp"
         android:text="@string/action_convidar_estudante"
+        android:textColor="@color/branco_claro"
         android:textSize="22sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -65,6 +66,7 @@
         android:layout_height="65dp"
         android:layout_marginTop="8dp"
         android:text="@string/action_editar_turma"
+        android:textColor="@color/branco_claro"
         android:textSize="22sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -78,6 +80,7 @@
         android:layout_height="65dp"
         android:layout_marginTop="8dp"
         android:text="@string/action_retirar_estudante"
+        android:textColor="@color/branco_claro"
         android:textSize="22sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -91,6 +94,7 @@
         android:layout_height="65dp"
         android:layout_marginTop="8dp"
         android:text="@string/action_excluir_turma"
+        android:textColor="@color/branco_claro"
         android:textSize="22sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
