--- a/lingoappTcc/app/src/main/res/layout/activity_criar_turma_professor.xml
+++ b/lingoappTcc/app/src/main/res/layout/activity_criar_turma_professor.xml
@@ -9,9 +9,9 @@
 
     <FrameLayout
         android:id="@+id/frame_barra_superior"
+        android:theme="@style/barraSuperiorVoltar"
         android:layout_width="match_parent"
         android:layout_height="80dp"
-        android:background="@drawable/barra_superior_voltar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -20,29 +20,20 @@
 
     <ImageButton
         android:id="@id/btn_voltar"
+        android:theme="@style/botaoVoltar"
         android:layout_width="50dp"
         android:layout_height="80dp"
-        android:background="@android:color/transparent"
-        android:rotation="270"
-        android:rotationX="0"
-        android:rotationY="0"
-        android:scaleType="fitCenter"
-        android:src="@drawable/ic_round_expand_less_24"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:tint="@color/branco_claro" />
+        app:layout_constraintTop_toTopOf="parent"/>
 
     <TextView
         android:id="@+id/text_criar_turma"
+        android:theme="@style/tituloDaPagina"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
         android:layout_marginTop="24dp"
-        android:fontFamily="@font/josefin_sans_semibold"
-        android:text="CRIAR TURMA"
-        android:textAlignment="center"
-        android:textColor="@color/branco_claro"
-        android:textSize="26sp"
+        android:text="@string/title_criar_turma"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -58,75 +49,56 @@
 
     <TextView
         android:id="@+id/text_instrucao"
+        android:theme="@style/textoRoxoLalezar"
         android:layout_width="240dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="12dp"
         android:layout_marginTop="32dp"
-        android:layout_marginEnd="12dp"
-        android:fontFamily="@font/lalezar"
         android:text="@string/msg_instrucao_criar_turma"
-        android:textAlignment="center"
-        android:textColor="@color/roxo"
-        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/frame_barra_superior" />
 
     <EditText
-        android:id="@+id/plain_text_nome_turma_input"
+        android:id="@+id/campo_nome_turma"
+        android:theme="@style/campoDeTexto"
         android:layout_width="280dp"
         android:layout_height="45dp"
-        android:layout_marginStart="12dp"
         android:layout_marginTop="12dp"
-        android:layout_marginEnd="12dp"
         android:background="@drawable/fundo_botao"
-        android:backgroundTint="@color/branco_escuro"
-        android:ems="10"
-        android:fontFamily="@font/arimo"
-        android:hint="  nome da turma"
-        android:inputType="number"
-        android:textAlignment="textStart"
-        android:textColor="@color/cinza_escuro"
+        android:hint="@string/msg_nome_turma"
+        android:inputType="text"
+        android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/text_instrucao" />
 
     <EditText
-        android:id="@+id/plain_text_senha_turma_input2"
+        android:id="@+id/campo_senha_turma"
+        android:theme="@style/campoDeTexto"
         android:layout_width="280dp"
         android:layout_height="45dp"
-        android:layout_marginStart="12dp"
         android:layout_marginTop="12dp"
-        android:layout_marginEnd="12dp"
         android:background="@drawable/fundo_botao"
-        android:backgroundTint="@color/branco_escuro"
-        android:ems="10"
-        android:fontFamily="@font/arimo"
-        android:hint="  senha da turma"
-        android:inputType="number"
-        android:textAlignment="textStart"
-        android:textColor="@color/cinza_escuro"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.504"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/plain_text_nome_turma_input" />
-
-    <Button
-        android:id="@+id/btn_criar"
-        android:layout_width="140dp"
-        android:layout_height="60dp"
-        android:layout_marginStart="12dp"
-        android:layout_marginTop="12dp"
-        android:layout_marginEnd="12dp"
-        android:backgroundTint="@color/laranja1"
-        android:fontFamily="@font/lalezar"
-        android:text="Criar"
-        android:textAllCaps="false"
-        android:textSize="20sp"
+        android:hint="@string/msg_senha_turma"
+        android:inputType="textPassword"
+        android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/plain_text_senha_turma_input2" />
+        app:layout_constraintTop_toBottomOf="@+id/campo_nome_turma" />
+
+    <Button
+        android:id="@+id/btn_criar"
+        android:theme="@style/botaoLaranja"
+        android:layout_width="140dp"
+        android:layout_height="60dp"
+        android:layout_marginTop="12dp"
+        android:text="@string/title_criar"
+        android:textColor="@color/branco_claro"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/campo_senha_turma" />
 </androidx.constraintlayout.widget.ConstraintLayout>
