--- a/lingoappTcc/app/src/main/res/layout/activity_aba_turmas_professor.xml
+++ b/lingoappTcc/app/src/main/res/layout/activity_aba_turmas_professor.xml
@@ -48,11 +48,11 @@
 
             <ImageButton
                 android:id="@+id/btn_criar_turma"
+                android:theme="@style/botaoAdicionar"
                 android:layout_width="60dp"
                 android:layout_height="60dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginEnd="15dp"
-                android:background="@drawable/ic_round_add_circle_24"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
