--- a/lingoappTcc/app/src/main/res/layout/activity_aba_perfil_estudante.xml
+++ b/lingoappTcc/app/src/main/res/layout/activity_aba_perfil_estudante.xml
@@ -65,7 +65,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="76dp"
-                android:text="@string/msg_nome_estudante"
+                android:text=""
                 android:textSize="24sp"
                 android:theme="@style/textoRoxoJosefin"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -78,7 +78,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
-                android:text="@string/msg_ex_email_estudante"
+                android:text=""
                 android:textSize="20sp"
                 android:theme="@style/textoRoxoJosefin"
                 app:layout_constraintEnd_toEndOf="parent"
