--- a/lingoappTcc/app/src/main/res/layout/activity_cadastro_estudante1.xml
+++ b/lingoappTcc/app/src/main/res/layout/activity_cadastro_estudante1.xml
@@ -44,8 +44,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:constraint_referenced_ids="btn_voltar, frame_barra_superior,
-        text_cadastro_estudante" >
-    </androidx.constraintlayout.widget.Group>
+        text_cadastro_estudante"></androidx.constraintlayout.widget.Group>
 
     <TextView
         android:id="@+id/text_preencher_dados"
@@ -62,16 +61,16 @@
 
     <Button
         android:id="@+id/btn_proximo"
+        android:theme="@style/botaoLaranja"
         android:layout_width="120dp"
         android:layout_height="60dp"
         android:layout_marginTop="24dp"
         android:text="@string/action_proximo"
         android:textColor="@color/branco_claro"
-        android:theme="@style/botaoLaranja"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/campo_data_nasc_estudante" />
+        app:layout_constraintTop_toBottomOf="@+id/campo_confirmar_senha_estudante" />
 
     <EditText
         android:id="@+id/campo_nome_estudante"
@@ -87,32 +86,49 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/text_preencher_dados" />
 
+
     <EditText
-        android:id="@+id/campo_sobrenome_estudante"
+        android:id="@+id/campo_email_estudante"
+        android:theme="@style/campoDeTexto"
         android:layout_width="310dp"
         android:layout_height="50dp"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="24dp"
         android:background="@drawable/fundo_botao"
-        android:hint="  sobrenome"
-        android:inputType="textPersonName"
-        android:theme="@style/campoDeTexto"
+        android:hint="  e-mail"
+        android:inputType="textEmailAddress"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/campo_nome_estudante" />
 
     <EditText
-        android:id="@+id/campo_data_nasc_estudante"
+        android:id="@+id/campo_senha_estudante"
+        android:theme="@style/campoDeTexto"
         android:layout_width="310dp"
         android:layout_height="50dp"
         android:layout_marginTop="15dp"
         android:background="@drawable/fundo_botao"
-        android:hint="  data de nascimento (DD/MM/AAAA)"
-        android:inputType="date"
-        android:theme="@style/campoDeTexto"
+        android:hint="  senha"
+        android:inputType="textPassword"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/campo_sobrenome_estudante" />
+        app:layout_constraintTop_toBottomOf="@+id/campo_email_estudante" />
+
+    <EditText
+        android:id="@+id/campo_confirmar_senha_estudante"
+        android:theme="@style/campoDeTexto"
+        android:layout_width="310dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="15dp"
+        android:background="@drawable/fundo_botao"
+        android:hint="  confirmar senha"
+        android:inputType="textPassword"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/campo_senha_estudante" />
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
